sonar-remediation-for-backend-cineplex